--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,54 +3,72 @@
 	padding:0;
 }
 
-nav{
+#nav{
 	background-color: whitesmoke;
+	height: 50px;
 }
 
 nav ul li a{
 	text-decoration: none;
+	color: black;
   }
 
-  nav ul li{
-  	width: 100px;
+ nav ul li{
   	display: inline-block;
   	float: right;
+  	width: 100px;
+  	margin-top: 10px;
   }
 
 #home{
 	background-image: url("../img/home.jpg");
 	text-align: center;
 	height: 500px;
+	margin-top: -50px;
 }
 
 #home h1{
 	color: whitesmoke;
 	margin-top: 50px;
+	padding-top: 200px;
+	font-weight: 900;
 }
 
-#home button{
+ button{
 	background-color: blue;
 	border-radius: 10px;
 	width: 80px;
 	margin-top: 50px;
+	color: whitesmoke;
 }
 
 img{
+	padding: 20px;
 	width: 40%;
+}
+
+.contenedor{
+	display: inline;
+	float: right;
+	width: 700px;
 }
 
 #hackaton{
 	background-color: yellow;
+	height: 400px;
 
 } 
 
-#hackaton p, #hackaton h1, #hackaton button{
-	float: right;
-	text-align: center;
+.bloque{
 	display: block;
+	padding-top: 20px;
 }
 
 form{
 	float: right;
+}
+
+button p{
+	color: whitesmoke;
 }
 
