--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,14 +11,14 @@
 nav ul li a{
 	text-decoration: none;
 	color: black;
-  }
+}
 
- nav ul li{
-  	display: inline-block;
-  	float: right;
-  	width: 100px;
-  	margin-top: 10px;
-  }
+nav ul li{
+	display: inline-block;
+	float: right;
+	width: 100px;
+	margin-top: 10px;
+}
 
 #home{
 	background-image: url("../img/home.jpg");
@@ -34,7 +34,7 @@ nav ul li a{
 	font-weight: 900;
 }
 
- button{
+button{
 	background-color: blue;
 	border-radius: 10px;
 	width: 80px;
@@ -70,5 +70,30 @@ form{
 
 button p{
 	color: whitesmoke;
+}
+
+#contact{
+	height: 500px;
+	margin-left: 50px;
+}
+
+#contact img{
+	margin-top: 8%;
+}
+
+input{
+	width: 450px;
+	margin-top: 20px;
+}
+
+h1{
+font-weight: bold;
+margin: 15px;
+font-size: 2em;
+}
+
+
+footer{
+	background-color: #32A4D9;
 }
 
